@@ -1,3 +1,15 @@
+Fri Jan 29 17:07:27 2016  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* win32/win32.c (fileattr_to_unixmode, rb_w32_reparse_symlink_p): volume
+	  mount point should be treated as directory, not symlink.
+	  [ruby-core:72483] [Bug #11874]
+
+	* win32/win32.c (rb_w32_read_reparse_point): check the reparse point is
+	  a volume mount point or not.
+
+	* win32/file.c (rb_readlink): follow above change (but this pass won't
+	  be used).
+
 Fri Jan 29 16:17:07 2016  Lucas Buchala  <lucasbuchala@gmail.com>
 
 	* enum.c (enum_take_while, enum_drop_while): rename block
